--- a/manifest.json
+++ b/manifest.json
@@ -10,5 +10,6 @@
     "contextMenus",
     "http://www.twitaa.in/"
   ],
-  "background_page": "background.html"
+  "background_page": "background.html",
+  "options_page": "options.html"
 }
