マニフェストのバージョンアップしろやって怒られたので追加 http://code.google.com/chrome/extensions/manifestVersion.html

--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,7 @@
   "name": "twitaa.in",
   "description": "Post ASCII Art to twitaa.in",
   "version": "0.0.1",
+  "manifest_version": 2,
   "icons": {
     "16": "icon.png"
   },
