--- a/manifest.json
+++ b/manifest.json
@@ -11,6 +11,8 @@
     "contextMenus",
     "http://www.twitaa.in/"
   ],
-  "background_page": "background.html",
+  "background": {
+    "page": "background.html"
+  },
   "options_page": "options.html"
 }
